chore(ui): improve console messages for initialization and extraction